Fixed star positions by applying radius shift git status

--- a/constellation-trainer/src/components/styles.css
+++ b/constellation-trainer/src/components/styles.css
@@ -132,10 +132,6 @@
 .testStar{
     position: absolute;
     background-color: white;
-    height: 8px;
-    width: 8px;
-    border-radius: 4px;
-
 }
 
 
